--- a/site_plan.html
+++ b/site_plan.html
@@ -23,7 +23,6 @@
   <header>
     <h1>Snack Time Hub - snacktimehub.com</h1>
   </header>
-
   <main>
     <!-- Purpose Section -->
     <section class="purpose">
@@ -77,15 +76,17 @@
 
     <!-- Mobile Wireframe Section -->
     <section class="wireframe">
-      <h2>Mobile Home Page Wireframe</h2>
-      <img src="images/mobile_siteplan.jpg" alt="Mobile Wireframe 1">
-      <img src="images/mobile_siteplan_wf.jpg" alt="Mobile Wireframe 2">
+      <h2>Mobile Home Page</h2>
+      <img src="images/mobile_siteplan.jpg" alt="Mobile Home Page">
+      <h2>Mobile Product Page Wireframe</h2>
+      <img src="images/mobile_siteplan_wf.jpg" alt="Mobile Wireframe">
     </section>
 
     <!-- Desktop Wireframe Section -->
     <section class="desktop-wireframe">
-      <h2>Desktop Home Page Wireframe</h2>
-      <img src="images/desktop_siteplan.jpg" alt="Desktop Wireframe 1">
+      <h2>Desktop Home Page</h2>
+      <img src="images/desktop_siteplan.jpg" alt="Desktop Home Page">
+      <h2>Desktop Product Page</h2>
       <img src="images/desktop_siteplan_wf.jpg" alt="Desktop Wireframe 2">
     </section>
   </main>
