--- a/form.html
+++ b/form.html
@@ -10,8 +10,9 @@
   <link rel="stylesheet" href="styles/form.css">
   <script src="scripts/form.js" defer></script>
 
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI&display=swap" rel="stylesheet">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
 
 </head>
 <body>
